Added Favourites, Added Logging, Added Unit Tests, Added Infrastructure

--- a/WeatherApp.Api/appsettings.json
+++ b/WeatherApp.Api/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WeatherApp": "Data Source=(localdb)\\MSSQLLocalDB;Database=weatherapp;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False"
+  }
 }
